# OpenBongo

./: .gitignore  CMakeLists.txt  README.md
catpacks/: README.md
catpacks/DarkScribbleCat/: config.txt
catpacks/DevArt/: config.txt
catpacks/DevArtBlue/: config.txt
catpacks/DevArtBlue/DevArtRed/: config.txt
catpacks/DevArtDark/: config.txt
catpacks/DevArtEyes/: config.txt
catpacks/DevArtRed/: config.txt
catpacks/DevArtRed/DevArt/: config.txt
catpacks/ScribbleCat/: config.txt
hats/TopHat/: config.txt
sfx/bonkpacks/bongo/: config.txt
sfx/entitysfx/meow/: config.txt
src/: BongoCat.cpp  BongoCat.h  BongoStats.cpp  BongoStats.h  CatPackConfig.cpp  CatPackConfig.h  CatPackManager.cpp  CatPackManager.h  CounterEncryption.cpp  CounterEncryption.h  HatConfig.cpp  HatManager.cpp  HatManager.h  ImageHelper.cpp  KeyboardHook.cpp  KeyboardHook.h  MouseHook.cpp  MouseHook.h  WebViewWindow.cpp  main.cpp  main_webview2.cpp
src/audio/: BonkPackConfig.cpp  BonkPackConfig.h  BonkPackManager.cpp  BonkPackManager.h  EntitySFXConfig.cpp  EntitySFXConfig.h  EntitySFXManager.cpp  EntitySFXManager.h
src/config/: CatPackConfig.cpp  CatPackConfig.h  HatConfig.cpp  HatConfig.h
src/core/: BongoCat.cpp  BongoCat.h  BongoStats.cpp  BongoStats.h  main.cpp  main_webview2.cpp
src/input/: KeyboardHook.cpp  MouseHook.cpp
src/managers/: CatPackManager.cpp  CatPackManager.h  HatManager.cpp  HatManager.h
src/platform/: MacKeyboardHook.cpp  MacKeyboardHook.h  WindowsKeyboardHook.cpp  WindowsKeyboardHook.h  WindowsMouseHook.cpp  WindowsMouseHook.h
src/resources/: OpenBongo.rc
src/ui/: WebViewWindow.cpp  WebViewWindow.h
src/utils/: CounterEncryption.cpp  ImageHelper.cpp  ImageHelper.h  Logger.h
ui/: app.js  index.html  styles.css
